--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
 <script src="app/core/bootstrap.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/core/movies.factory.js"></script>
+<script src="app/core/core.module.js"></script>
+<script src="app/features/index/reelr.module.js"></script>
 <script src="app/features/index/reelr.controller.js"></script>
+<script src="app/features/movies/movies.module.js"></script>
 <script src="app/features/movies/movies.controller.js"></script>
 <script src="app/features/movies/movies.directive.js"></script>
+<script src="app/features/movies/preview.directive.js"></script>
 
 </html>
