--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,15 @@
   <title>Reelr</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-  <app>
+  <reelr-app>
     <div class="row vertical-align">
       <i class="loading fa fa-cog fa-lg fa-spin"></i>
     </div>
-  </app>
+  </reelr-app>
 </body>
 </html>
