--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,7 @@
       <i class="loading fa fa-cog fa-lg fa-spin"></i>
     </div>
   </reelr-app>
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </body>
 </html>
